# BenchMark

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md  STATISTICS.md
.doxygen/: Doxyfile.in  stats.py  update_version.py
.doxygen/html/: extraStyleSheet.css
images/: Benchmarking Tool.uxf
src/: Test1_memcpy.cpp  Test1_memcpy.hpp  Test2_memset.hpp  Test2_movsq.hpp  Test3_memset.hpp  Test3_stosq.hpp  Test4_movsq.hpp  Test4_stosq.hpp  Test5_movdqa.hpp  Test6_mov.hpp  main_BenchMark.cpp  typedefs.hpp  version.cpp  version.hpp
src/lib/: BaseRunner.cpp  BaseRunner.hpp  BufferRunner.cpp  BufferRunner.hpp  HexDump.cpp  HexDump.hpp  LogRunner.cpp  LogRunner.hpp  LogStudy.cpp  LogStudy.hpp  Series.cpp  Series.hpp  Test0_Nothing.cpp  Test0_Nothing.hpp
tests/: test_libBenchMark.cpp  test_version.cpp
